--- a/ovs/ovs-dbserver-data/Dockerfile
+++ b/ovs/ovs-dbserver-data/Dockerfile
@@ -2,5 +2,6 @@ FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%ovs-base:%%KOLLA_TAG%%
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
 VOLUME ["/etc/openvswitch"]
+VOLUME ["/run"]
 
 CMD ["/bin/bash"]
